# btc-dev-utils

./: Cargo.toml  README.md  justfile  mockOrdContent.txt  note.md  regtest-inscribe-ord.py  regtest-mine-sign-tx.py  regtest-ord-tx.py  regtest-sign-tx.py  settings.toml
scripts/: build_bitcoincore_and_ord.sh
src/: main.rs  settings.rs  utils.rs  wallet.rs
src/modules/: bitcoind.rs  bitcoind_client.rs  bitcoind_conn.rs  cli.rs  client.rs  errors.rs  mod.rs  verification.rs  wallet.rs  wallet_ops.rs
src/utils/: cli.rs  mod.rs  utils.rs
