[package]
name = "btc-dev-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.31.1", features = ["bitcoinconsensus"] }
bitcoincore-rpc = "0.18.0"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.10"
hex = "0.4"
miniscript = "9.0.0"
